--- a/deployment/sample.yaml
+++ b/deployment/sample.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: sample
-        image: nexweb1/sample:dev
+        image: docker.io/nexweb1/sample:dev
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
