--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
   agent {
     kubernetes {
       yamlFile 'deployment/openshift-pod-template.yaml'
-      cloud 'openshift'
+      cloud 'openshift-ibm'
       defaultContainer 'maven'
     }
   }
