--- a/deployment/sample.yaml
+++ b/deployment/sample.yaml
@@ -20,4 +20,11 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
+        resources:
+          limits:
+            cpu: 100m
+            memory: 128Mi
+          requests:
+            cpu: 100m
+            memory: 128Mi
 
