--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -47,7 +47,7 @@ pipeline {
               env['selector_key'] = props['selector_key']
               env['selector_val'] = props['selector_val']
               env['namespace'] = 'education'
-              env['apiserver'] = props['knowis-apiserver']
+              env['apiserver'] = props['ibm-apiserver']
         }
       }
     }
@@ -93,7 +93,7 @@ pipeline {
       steps {
         container('openshift-cli') {
             script {
-                  withCredentials([string(credentialsId: 'openshift-token', variable: 'secret')]) {
+                  withCredentials([string(credentialsId: 'openshift-ibm-token', variable: 'secret')]) {
                     echo "My secret text is '${secret}'"
                     
                     sh "oc login --token='${secret}' --server=${apiserver}"
