--- a/deployment/openshift-pod-template.yaml
+++ b/deployment/openshift-pod-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 spec:
-  serviceAccount: pipeline
+  serviceAccount: jenkins
   containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
     - name: maven
       image: maven:3.8.1-jdk-8
