--- a/deployment/openshift-pod-template.yaml
+++ b/deployment/openshift-pod-template.yaml
@@ -4,28 +4,23 @@ spec:
   serviceAccount: jenkins
   containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
     - name: maven
-      image: maven:3.8.1-jdk-8
-      imagePullPolicy: Always # use cache or pull image for agent
-      command:
-        - sleep
-      args:
-        - 99d
-      env:
-        - name: HOME
-          value: "/root"
+      image: maven:alpine
+      command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
+      imagePullPolicy: Always # use cache or pull image for agen
+      volumeMounts:
+        - name: maven-repo-vol
+          mountPath: /root/.m2
+
     - name: kaniko
       image: gcr.io/kaniko-project/executor:debug
       imagePullPolicy: Always
-      command:
-        - sleep
-      args:
-        - 99d
+      command: ["cat"]
       tty: true
       env:
         - name: DOCKER_CONFIG
           value: /kaniko/.docker
       volumeMounts:
-        - name: kaniko-secret
+        - name: docker-credentials
           mountPath: /kaniko/.docker
     - name: openshift-cli
       image: docker.io/nexweb1/cli:latest
@@ -36,9 +31,12 @@ spec:
         - 99d
       tty: true              
   volumes:
-    - name: kaniko-secret
+    - name: docker-credentials
       secret:
         secretName: docker-credentials
         items:
           - key: .dockerconfigjson
-            path: config.json   
+            path: config.json    
+    - name: maven-repo-vol
+      hostPath:
+        path: /root/.m2
