--- a/deployment/openshift-pod-template.yaml
+++ b/deployment/openshift-pod-template.yaml
@@ -1,26 +1,33 @@
 apiVersion: v1
 kind: Pod
 spec:
-  serviceAccount: jenkins
   containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
     - name: maven
-      image: maven:alpine
-      command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
-      imagePullPolicy: Always # use cache or pull image for agen
+      image: maven:3.8.1-jdk-8
+      imagePullPolicy: Always # use cache or pull image for agent
+      command:
+        - sleep
+      args:
+        - 99d
+      env:
+        - name: HOME
+          value: "/root"
       volumeMounts:
         - name: maven-repo-vol
-          mountPath: /root/.m2
-
+          mountPath: /root/.m2         
     - name: kaniko
       image: gcr.io/kaniko-project/executor:debug
       imagePullPolicy: Always
-      command: ["cat"]
+      command:
+        - sleep
+      args:
+        - 99d
       tty: true
       env:
         - name: DOCKER_CONFIG
           value: /kaniko/.docker
       volumeMounts:
-        - name: docker-credentials
+        - name: kaniko-secret
           mountPath: /kaniko/.docker
     - name: openshift-cli
       image: docker.io/nexweb1/cli:latest
@@ -31,12 +38,12 @@ spec:
         - 99d
       tty: true              
   volumes:
-    - name: docker-credentials
+    - name: kaniko-secret
       secret:
         secretName: docker-credentials
         items:
           - key: .dockerconfigjson
-            path: config.json    
+            path: config.json   
     - name: maven-repo-vol
       hostPath:
         path: /root/.m2
