--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -48,7 +48,7 @@ pipeline {
               env['selector_key'] = props['selector_key']
               env['selector_val'] = props['selector_val']
               env['namespace'] = 'education'
-              env['apiserver'] = props['knowis-apiserver']
+              env['apiserver'] = props['ibm-apiserver']
         }
       }
     }
