--- a/deployment/pipeline.properties
+++ b/deployment/pipeline.properties
@@ -16,7 +16,7 @@ service=deployment/service.yaml
 selector_key=app
 selector_val=sample
 knowis-apiserver=https://api.openshift-01.knowis.cloud:6443
-ibm-apiserver=https://c100-e.jp-tok.containers.cloud.ibm.com:30806
+ibm-apiserver=https://api.apps.elskr.zanity.net:6443
 
 # Git Commit and Push
 credentialGit=gitlab-nexweb
